Task 22. (isssue #24). Validation implemented for new company. Validation messeges writing left.

--- a/controller/src/main/resources/localization/messages/addcompany_en.properties
+++ b/controller/src/main/resources/localization/messages/addcompany_en.properties
@@ -1,1 +1,37 @@
+addcompany.title=Add company
+addcompany.name=Name
+addcompany.tags=Tags
+responsibleuser=Responsible Person
+addcompany.phone=Phone
+email=Email
+addcompany.website=www
+addcompany.address=Address
+addcompany.note=Note
+addcompany.addfile=Add file
+addcompany.selectcontact=Select contact
+addcompany.addcontact=Add contact
+
+addcontact.title=Adding contact
+addcontact.names=First, last names
+addcontact.position=Position
+addcontact.skype=Skype
+
+addcompany.adddeal=Add deal
+
+adddeal.title=Deals
+adddeal.name=Name
+adddeal.stage=Stage
+adddeal.budget=Budget
+addtask.title=Add task
+addtask.period=Select period
+addtask.date=Date
+addtask.time=Time
+addtask.type=Type
+
+addcompanyform.saveall=Save ALL
+addcompanyform.cancel=Cancell all
 addcompany.companyname=Company name
+
+
+
+
