Task 22. (isssue #24). Validation for company completed.

--- a/controller/src/main/resources/localization/messages/validation/addcompany_en.properties
+++ b/controller/src/main/resources/localization/messages/validation/addcompany_en.properties
@@ -1,2 +1,15 @@
 notnull.company.name=Company name must be not null.
-size.company.name=Company name must be of size from 3 to 50 characters.
+size.company.name=Company name must be of size from 3 to 100 characters.
+notnull.company.responsibleUser=Choose responsible person.
+notnull.company.tag=Tags field must not be blank.
+size.company.tag=Company tags must be of size from 2 to 50 characters.
+notnull.company.phone=Company phone field must not be blank.
+pattern.company.phone=Enter a valid company phone number
+notnull.company.email=Company email field must not be blank.
+pattern.company.email=Enter a valid company email
+notnull.company.www=Company web-site field must not be blank.
+pattern.company.www=Enter a valid company web-site
+notnull.company.address=Company address field must not be blank.
+size.company.address=Company address must be of size from 2 to 100 characters.
+notnull.company.note=Company note field must not be blank.
+size.company.note=Company note must be of size from 2 to 100 characters.
