--- a/controller/src/main/resources/localization/messages/validation/addcompany_ru.properties
+++ b/controller/src/main/resources/localization/messages/validation/addcompany_ru.properties
@@ -1,2 +1,15 @@
-notnull.company.name=Название компании не может быть пустым.
-size.company.name=Название компании должно состоять из 3-50 символов.
+notnull.company.name=Поле названия компании не может быть пустым.
+size.company.name=Название компании должно состоять из 3-100 символов.
+notnull.company.responsibleUser=Необходимо выбрать ответственного.
+notnull.company.tag=Поле тэги компании не может быть пустым.
+size.company.tag=Тэги компании должны состоять из 2-50 символов.
+notnull.company.phone=Поле телефона компании не может быть пустым.
+pattern.company.phone=Телефон компании должен быть указан согласно общепринятых стандартов.
+notnull.company.email=Поле электронной почты компании не может быть пустым.
+pattern.company.email=Введена не валидная электронная почта компании.
+notnull.company.www=Поле сайта компании не может быть пустым.
+pattern.company.www=Введен не валидный вебсайт.
+notnull.company.address=Поле адреса компании не может быть пустым
+size.company.address=Адрес компании должен состоять из 2-100 символов
+notnull.company.note=Поле примечания компании не может быть пустым
+size.company.note=Примечание должно состоять из 2-100 символов
